--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: products
+#
+#  id          :integer          not null, primary key
+#  name        :string
+#  brand_id    :integer
+#  category_id :integer
+#  image       :string
+#  price       :integer
+#  slug        :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  description :string
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
