--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: profiles
+#
+#  id         :integer          not null, primary key
+#  first_name :string
+#  last_name  :string
+#  phone      :string
+#  birth_date :date
+#  province   :string
+#  adress     :text
+#  user_id    :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
